# mcp-learning

mcp-client/: .gitignore  pyproject.toml
mcp-client/src/: cli.py  client_provider.py  mcp_client.py  model.py  server.py
mcp-client/src/db/: db.py  models.py
mcp-client/src/routers/: conversations.py  models.py  tools.py
mcp-client/src/services/: client_service.py  mcp_service.py
mcp-frontend/: package.json  pnpm-lock.yaml
mcp-frontend/src/app/: globals.css  layout.tsx
mcp-frontend/src/app/chat/: layout.tsx  page.tsx
mcp-frontend/src/app/chat/[id]/: page.tsx
mcp-frontend/src/components/: chat-header.tsx  chat-input.tsx  conversations-list.tsx  delete-confirm-dialog.tsx  markdown-renderer.tsx  new-conversation-dialog.tsx  theme-toggle.tsx
mcp-frontend/src/components/blocks/: code-block.tsx  thinking-block.tsx  tool-block.tsx
mcp-frontend/src/lib/: api.ts
mcp-server-relevance-analysis/: pyproject.toml
mcp-server-relevance-analysis/src/: main.py
mcp-server-webhook-helper/: pyproject.toml
mcp-server-webhook-helper/src/: main.py
mcp-server-wordcloud/: pyproject.toml
mcp-server-wordcloud/src/: main.py
